--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "uifx": "^2.0.7",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
